1998-03-01  Thomas E. Dickey  <dickey@clark.net>

	* src/dedmake.c: missed an if-then-else in the last change

	* src/makefile.2nd: add @PROG_EXT@

	* src/dedmake.c: comment

	* src/dedline.c: build on OS/2 EMX

	* src/dedmake.c: OS/2 EMX doesn't have 'link()'

	* src/ded2s.c:
	mods to build on EMX, which has no S_ISVTX, S_IFBLK or major/minor macros

	* src/ded.h:
	mods to build on EMX, which has no link/symlink, nor S_IFBLK

	* configure.in: pass '$AWK' to config.status

1998-02-20  Thomas E. Dickey  <dickey@clark.net>

	* aclocal.m4: minor nits, from other scripts

1998-02-19  Thomas E. Dickey  <dickey@clark.net>

	* src/ftree.c:
	reuse 'apollo' code to attempt resize/repaint on 'w' command

1998-02-16  Thomas E. Dickey  <dickey@clark.net>

	* src/ded2s.c, src/ded.c, src/ded.h, src/dedring.c: rename:O_opt

	* src/showpath.c: gcc signed/unsigned

	* src/ded.c, src/restat.c, src/dedview.c, src/ded.h: unused params

	* src/dedtype.c: gcc warnings (signed/unsigned)

	* src/ded.h: make curfile unsigned, fix warnings

	* src/dedview.c, src/dedscan.c: gcc warnings (signed/unsigned)

	* src/deduniq.c: signed/unsigned nits

	* src/dedline.c: more compiler warnings (signed/unsigned)

	* src/dedfind.c:
	make this handle unsigned gbl->curfile, as well as make it a little more
	robust wrt empty search strings.

	* src/dedfind.c: workaround so we can make curfile unsigned

	* src/ded.c: missed 'O' to 'Y' change when I rolled back a test-change

1998-02-15  Thomas E. Dickey  <dickey@clark.net>

	* src/version.h:
	generate all makefiles, making this portable to systems having 'make'
	programs w/o archive rules.
	remove apollo_sr10 code (because it's obsolete, and because I want to be
	able to re-use some of the command-codes).  This frees up o/O, to which I
	renamed y/Y (was lock owner).  That lets me reserve y/Y for vertical split.
	Started working on compiler warnings (gcc's signed/unsigned).
	Add home/end/ppage/npage keys where appropriate.